--- a/cloudrun.yaml
+++ b/cloudrun.yaml
@@ -19,7 +19,7 @@ spec:
       containerConcurrency: 80
       timeoutSeconds: 300
       containers:
-      - image: REGION-docker.pkg.dev/PROJECT_ID/joke-bot/joke-bot:latest
+      - image: europe-west2-docker.pkg.dev/PROJECT_ID/joke-bot/joke-bot:latest
         ports:
         - name: http1
           containerPort: 8080
