--- a/.dockerignore
+++ b/.dockerignore
@@ -56,6 +56,6 @@ fetch_jokes.py
 MONITORING_GUIDE.md
 ANALYTICS_SUMMARY.md
 CLOUDRUN_FIX.md
+BUILD_ERROR_FIX.md
 startup.sh
-.dockerignore
-Dockerfile
+test_build.sh
